--- a/src/app/Globals.scss
+++ b/src/app/Globals.scss
@@ -103,8 +103,8 @@ h4 {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100dvh;
 	height: 100vh;
+	height: 100%;
 	z-index: -1;
 	overflow: hidden;
 }
